<resources>
    <string name="app_name">Radioamin</string>
    <string name="sweb_client_id">1074139900657-am0kuednioe7nhhe04m7v0qfeq06v04t.apps.googleusercontent.com</string>
    <string name="sign_in_msg">Sign in to stream and browse playlists, albums, and artists from Radioamin</string>
    <string name="sign_in">Sign in</string>
    <string name="device_files_only">Device Files Only</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="songCount">%d songs</string>
    <string name="albumCount">%d albums</string>
    <string name="songCountSingle">%d song</string>
    <string name="albumCountSingle">%d album</string>
    <string name="playlistMembersCountSingle">Playlist • %d song</string>
    <string name="playlistMembersCount">Playlist • %d songs</string>
    <string name="new_playlist">New Playlist</string>
    <string name="new_genre">New Genre</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="songArtistAlbumDuration">%s • %s • %s</string>
    <string name="albumArtistCount">%s • %s</string>
    <string name="artistSongAlbumCount">%s • %s</string>
    <string name="empty_playlists_msg">Playlists on your device will show up here</string>
    <string name="empty_genres_msg">Genres on your device will show up here</string>
    <string name="empty_albums_msg">Albums on your device will show up here</string>
    <string name="empty_songs_msg">Songs on your device will show up here</string>
    <string name="empty_artists_msg">Artists on your device will show up here</string>
    <string name="allow">Allow</string>
    <string name="not_now">Not Now</string>
    <string name="read_write_file_permission_title">Play audio files from your device?</string>
    <string name="read_write_file_permission_description">Allow Radioamin to access and play music files</string>
    <string name="title">Title</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="album">Album</string>
    <string name="by_artist_name">by %s</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="shuffle_play">Shuffle play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="view">View</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="done">Done</string>
    <string name="playlist_updated_successfully">Playlist updated successfully</string>
    <string name="playlist_creation_msg">Playlist %s created successfully</string>
    <string name="error_msg">An error occurred</string>
    <string name="delete_this_playlist">Delete this playlist?</string>
    <string name="delete">Delete</string>
    <string name="playlist_delete_msg">Playlist %s deleted successfully</string>
    <string name="song_delete_msg">Song %s deleted successfully</string>
    <string name="genres">Genres</string>
    <string name="edit_song_info">Edit Song Info</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="lyrics">Lyrics</string>
    <string name="song_info_updated">Song info updated successfully</string>
    <string name="selece_song_cover">Select Song Cover</string>
    <string name="delete_song">Delete Song</string>
    <string name="delete_this_song">Delete this song?</string>
    <string name="scanning_media_files">Scanning media files...</string>
    <string name="filter_folders">Filter Folders</string>
    <string name="blacklist_folders_updated">Blacklist folders updated</string>
    <string name="filtered_songs_notify_msg">Some of your songs are filtered</string>
    <string name="up_next">UP NEXT</string>
    <string name="playlist_play_next">Playlist will play next</string>
    <string name="album_play_next">Album will play next</string>
    <string name="song_play_next">Song will play next</string>
    <string name="artist_play_next">Artist Songs will play next</string>
    <string name="genre_play_next">Genre Songs will play next</string>
    <string name="playlist_add_to_queue">Playlist added to queue</string>
    <string name="album_add_to_queue">Album added to queue</string>
    <string name="song_add_to_queue">Song added to queue</string>
    <string name="artist_add_to_queue">Artist added to queue</string>
    <string name="genre_add_to_queue">Genre added to queue</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="library">Library</string>
    <string name="account">Account</string>
    <string name="no_google_account">Can\'t find any google account on this device</string>
    <string name="no_connection_error">There is no network connection right now</string>
    <string name="musics">Musics</string>
    <string name="see_more">See More</string>
    <string name="genres_and_moods">Genres and Moods</string>
    <string name="music_videos">Music Videos</string>
</resources>