<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/color6"
            android:padding="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_playlist"
                android:textSize="20sp"
                android:textColor="@color/white"
                fontPath="fonts/OpenSans-ExtraBold.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/color10"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                >

                <Button
                    android:id="@+id/negativeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

                <Button
                    android:id="@+id/positiveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color5"
                    android:enabled="false"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>