<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="ir.mab.radioamin.ui.deviceonly.song.EditDeviceSongInfoFragment.Handlers" />

        <variable
            name="title"
            type="String" />

        <variable
            name="album"
            type="String" />

        <variable
            name="artist"
            type="String" />

        <variable
            name="genre"
            type="String" />

        <variable
            name="language"
            type="String" />

        <variable
            name="country"
            type="String" />
        
        <variable
            name="year"
            type="String" />
        
        <variable
            name="lyrics"
            type="String" />

        <variable
            name="cover"
            type="android.graphics.Bitmap" />

        <variable
            name="showProgress"
            type="boolean" />

        <variable
            name="coverEditMode"
            type="boolean" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color1">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color1"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/color1"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarParent"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="none">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ir.mab.radioamin.ui.custom.SimpleToolbarWithBackIconAndTitleCompoundView
                            android:id="@+id/toolbar"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@+id/done"
                            app:stBackIconTint="@color/white"
                            app:stTitle="@string/edit_song_info"
                            app:stTitleColor="@color/white"

                            />


                        <Button
                            android:id="@+id/done"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/done"
                            android:onClick="@{handler::onClickDone}"
                            android:textColor="@color/white"
                            app:layout_constraintRight_toRightOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{handler::onClickCover}"
                        >

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/coverImageView"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintDimensionRatio="H,1:1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:scaleType="centerCrop"
                            app:imageBitmap="@{cover}"
                            android:alpha="@{coverEditMode ? 0.4f:1.0f}"
                            />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_margin="24dp"
                            app:srcCompat="@drawable/ic_pen"
                            app:tint="@color/color10"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/title"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={title}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/album"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={album}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/artist"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={artist}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/genre"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={genre}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/language"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={language}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/country"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={country}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/year"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={year}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/lyrics"
                            android:textColor="@color/color10" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={lyrics}"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/color10" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.core.widget.NestedScrollView>

            <ir.mab.radioamin.ui.custom.ProgressCompoundView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:pcVisibility="@{showProgress ? View.VISIBLE: View.GONE}" />


        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>